src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Approval_Due_Date__c</fullName>
        <label>Approval Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Batch_Interval_Days__c</fullName>
        <description>Used only for Campaign Execution (together with Batch Size field)</description>
        <label>Batch Interval (Days)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <description>Used only for Campaign Execution.</description>
        <label>Batch Size</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAC_Campaign_Type__c</fullName>
        <description>Used for CAC CRM Campaign reporting purpose. Also used for CAC Campaign. Different LOVs for each controlled by record type.</description>
        <label>CAC Campaign Type</label>
        <picklist>
            <picklistValues>
                <fullName>Auto Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyalty Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitions and Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad-hoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAC_Frequency_Category__c</fullName>
        <description>Used on CAC Campaign Planning layout. Also used to differentiate the CAC Campaign Calendar view.</description>
        <label>CAC Frequency Category</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Hoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular-Continuous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular-Periodic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Channels__c</fullName>
        <label>Campaign Channels</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <externalId>true</externalId>
        <label>Campaign Code</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Campaign_Format__c</fullName>
        <label>Campaign Format</label>
        <picklist>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autoshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Showroom Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Objectives__c</fullName>
        <label>Campaign Objectives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Offer_Type__c</fullName>
        <label>Campaign Offer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Test Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Participation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incentive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Partner__c</fullName>
        <label>Campaign Partner</label>
        <referenceTo>Campaign_Partner__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Response_Channels__c</fullName>
        <label>Campaign Response Channels</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Content_Preview__c</fullName>
        <description>Used only for Campaign Execution. To display the Message Detail of Template selected. Updated by workflow (because it&apos;s a long text not able to use formula).</description>
        <label>Content Preview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DM_Material__c</fullName>
        <label>DM Material</label>
        <referenceTo>DM_Material__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Execution_Type__c</fullName>
        <description>Used only for Campaign Execution record type. To defined the execution channel.</description>
        <label>Execution Type</label>
        <picklist>
            <picklistValues>
                <fullName>OB Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Lead__c</fullName>
        <label>Expected Leads (%)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Participation__c</fullName>
        <label>Expected Participation (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Registration__c</fullName>
        <label>Expected Registration (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interval_Before_Execution_Hours__c</fullName>
        <description>Used only for Campaign Execution.</description>
        <label>Interval Before Execution (Hours)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Participating_Region_Province__c</fullName>
        <label>Participating Region-Province</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E	Anhui</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E	Jiangsu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E	Jiangxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E	Shanghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E Zhejiang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E Fujian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N	Hebei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N	Henan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N	Heilongjiang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N	Jilin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N	Liaoning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N	Inner Mongolia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N	Ningxia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N	Qinghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N	Shandong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N	Shanxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N	Shaanxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N	Tianjin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N	Tibet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N	Beijing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N	Xinjiang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N	Gansu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S	Hubei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S	Hunan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S	Sichuan</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Previous_Campaign_Execution__c</fullName>
        <description>Used only for Campaign Execution record type. To build the sequence of Campaign Executions.</description>
        <label>Previous Campaign Execution</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Consequent Campaign Executions</relationshipLabel>
        <relationshipName>Consequent_Campaign_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Questionnaire__c</fullName>
        <label>Questionnaire</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Campaign Executions</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Repeat_End__c</fullName>
        <label>Repeat End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Repeat_Frequency__c</fullName>
        <label>Repeat Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Repeat_From__c</fullName>
        <label>Repeat From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Repeated_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repeated Campaign?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resource_Channels__c</fullName>
        <label>Resource Channels</label>
        <picklist>
            <picklistValues>
                <fullName>MB Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Scale_Volume__c</fullName>
        <label>Scale/Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submission_Due_Date__c</fullName>
        <label>Submission Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <description>Used only for Campaign Execution record type. To lookup Template object to define Callscript, eDM name, or SMS template based on the Execution Type.</description>
        <inlineHelpText>Select Callscript, eDM name, or SMS template based on the Execution Type</inlineHelpText>
        <label>Template</label>
        <referenceTo>Template__c</referenceTo>
        <relationshipLabel>Campaign Executions</relationshipLabel>
        <relationshipName>Campaign_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllCACCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.CAC_Campaign</value>
        </filters>
        <label>All CAC Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllCASCRMCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.CAC_CRM_Campaign</value>
        </filters>
        <label>All CAC CRM Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllCASCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.CAS_Marketing_Campaign</value>
        </filters>
        <label>All CAS Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Template__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllCentralCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Central_Marketing_Campaign</value>
        </filters>
        <label>All Central Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Campaign_Execution</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>Execution_Type__c</columns>
        <columns>Previous_Campaign_Execution__c</columns>
        <columns>Interval_Before_Execution_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Campaign_Execution</value>
        </filters>
        <label>All Campaign Execution</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>CAC_CRM_Campaign</fullName>
        <active>true</active>
        <description>For CAC CRM Manager Campaign Planning</description>
        <label>CAC CRM Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>CAC_Campaign</fullName>
        <active>true</active>
        <description>For CAC Campaign Operation</description>
        <label>CAC Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>CAS_Marketing_Campaign</fullName>
        <active>true</active>
        <description>For CAS Marketing Campaign Planning</description>
        <label>CAS Marketing Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Campaign_Execution</fullName>
        <active>true</active>
        <description>For Campaign Executions of various channels (OB/SMS/eDM/DM )</description>
        <label>Campaign Execution</label>
    </recordTypes>
    <recordTypes>
        <fullName>Central_Marketing_Campaign</fullName>
        <active>true</active>
        <description>For Central Marketing Campaign Planning</description>
        <label>Central Marketing Campaign</label>
    </recordTypes>
    <validationRules>
        <fullName>Only_Started_Campaign_can_be_activated</fullName>
        <active>true</active>
        <description>When Status = Planned, Confirmed, Approved, Closed, Cancelled, Active can not be true.
Record Type = CAC CRM, Central Campaign, CAS Campaign</description>
        <errorConditionFormula>NOT(ISPICKVAL( Status , &apos;Started&apos;)) 
&amp;&amp; IsActive
&amp;&amp; ( RecordTypeId = &quot;012N0000000ClJT&quot; || RecordTypeId = &quot;012N0000000Cl19&quot; || RecordTypeId = &quot;012N0000000ClJO&quot; )</errorConditionFormula>
        <errorDisplayField>IsActive</errorDisplayField>
        <errorMessage>Only Campaign with &quot;Started&quot; status can be activated.</errorMessage>
    </validationRules>
</CustomObject>